fix: fix bugs in /search requests
